--- a/Index.HTML
+++ b/Index.HTML
@@ -1,1 +1,16 @@
-Sweet Tooth
+<html>
+  <head>
+    <title>Mittens for Kittens</title>
+  </head>
+  <body>
+    <h1>Let's watch cooking!</h1>
+    <p>
+      Here you can see past cooking shows of the famous chefs in the Food Network channel. 
+    </p><img src=http://thumbs.dreamstime.com/z/chocolate-milk-splash-18332827.jpg width=305>
+    <img src=>
+    
+    <iframe width="420" height="315" src="//www.youtube.com/embed/a1Y73sPHKxw" frameborder="0" allowfullscreen></iframe>
+I am sorry (not) to have lied to you, but this is just some weird randon site that's not going to last very long in the future. I only do these these things for fun, and I know, I know it's not very "cool" or anyting like that. But whatever...    
+      
+    </body> 
+</html>
