Change of title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Mittens for Kittens</title>
   </head>
   <body>
-    <h1>Let's watch cooking!</h1>
+    <h1>Frisco-Only WE can say it!</h1>
     <p>
       Here you can see past cooking shows of the famous chefs in the Food Network channel. 
     </p><img src=http://thumbs.dreamstime.com/z/chocolate-milk-splash-18332827.jpg width=305>
