--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
   <head>
-    <title>Mittens for Kittens</title>
+    <title>Mittens for Kittens</title> 
+      <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
     <h1>Frisco-Only WE can say it!</h1>
     <p>
-      Here you can see past cooking shows of the famous chefs in the Food Network channel. 
-    </p><img src=http://thumbs.dreamstime.com/z/chocolate-milk-splash-18332827.jpg width=305>
-    <img src=>
+       San Franscisco is the city, where the famous Golden Gate Brdidge is at even though it's not gold which is a real shame. Or perhpas a blessing, who knows. All I know is that if that bridge was made out of pure gold, the government would come up to us and take it away! Just like that! All because they want to pay their bills and taxes just we do! Fortunately, it is red-like the color of the sunset when all the hidden rainbow colors hide behind it. The bridge stands tall and proud! And yet her beauty cannot be match as she filled with pride, joy and histroy. A histroy, that will last on forever and foever till the ends of time. And that's what makes it gold, all.
+    </p>
+    <img src="http://cdn.precioyviajes.com/Destinations/105/105/san-francisco-1260661019-L.jpg">
     
-    <iframe width="420" height="315" src="//www.youtube.com/embed/a1Y73sPHKxw" frameborder="0" allowfullscreen></iframe>
-I am sorry (not) to have lied to you, but this is just some weird randon site that's not going to last very long in the future. I only do these these things for fun, and I know, I know it's not very "cool" or anyting like that. But whatever...    
       
-    </body> 
+    </body>
 </html>
